[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Util/RangeControl.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 132.0
margin_top = 53.0
margin_right = 348.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 108, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 216.0
margin_bottom = 163.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 155.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 12

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 9.0
text = "OPTIONS"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 200.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 56.0
margin_bottom = 16.0
text = "Window Mode"

[node name="WindowModeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 104.0
margin_right = 200.0
size_flags_horizontal = 10
text = "WINDOWED"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 200.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_top = 6.0
margin_right = 57.0
margin_bottom = 15.0
text = "Music Volume"

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolumeContainer" instance=ExtResource( 4 )]
margin_left = 128.0
margin_right = 200.0

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer"]
margin_top = 6.0
margin_right = 50.0
margin_bottom = 15.0
text = "SFX Volume"

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolumeContainer" instance=ExtResource( 4 )]
margin_left = 128.0
margin_right = 200.0

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 52.0
margin_top = 123.0
margin_right = 148.0
margin_bottom = 147.0
text = "Back"
